
syntax = "proto3";

option go_package = "github.com/plant-sense/mock-monitoring-agent/internal/gen/pb";

package plant_sense.internal;

message ActuatorState {
  string device_id = 1;
  bool state = 2;
  optional double intensity = 3;  // For dimmable devices (0.0 - 1.0)
}

message SetActuatorStateRequest {
  string device_id = 1;
  bool state = 2;
  optional double intensity = 3;
}

message GetActuatorStateRequest {
  string device_id = 1;
}

service ActuatorService {
  rpc GetState(GetActuatorStateRequest) returns (ActuatorState);
  rpc SetState(SetActuatorStateRequest) returns (ActuatorState);
  rpc StreamState(GetActuatorStateRequest) returns (stream ActuatorState);
}